@@ -33,6 +33,14 @@ SMS
    providers to not log SMS content.
 
 
+CDRs
+------------------
+cdr_odbc
+------------------
+ * Added a new configuration option, "newcdrcolumns", which enables use of the
+   post-1.8 CDR columns 'peeraccount', 'linkedid', and 'sequence'.
+
+
 Channel Drivers
 ------------------
 
